<resources>
    <string name="app_name" translatable="false">Easy Pay</string>

    <string name="store_name">My Online Store</string>
    <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking">Checking if Google Pay is available...</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_for_everyone_to_pay_easily">App for everyone to\npay easily</string>
    <string name="forget"><u>Forget Password</u></string>
    <string name="something_wrong_get_help">Something Wrong, Get Help</string>
    <string name="successful_payment">Successful Payment</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="payment_date">Payment Date</string>
    <string name="line_number">Line Number</string>
    <string name="current">Current</string>
    <string name="history">History</string>
    <string name="line">Line</string>
    <string name="quantity">Quantity</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="easy_pay">EASY PAY</string>
    <string name="reservation">reservation</string>
    <string name="checkout">Checkout</string>
    <string name="confirm">Confirm</string>
    <string name="please_scan_qr_code_on_the_ticket_you_will_find_scanner_on_the_entrance_of_the_train">Please, Scan QR code on the ticket. You will find scanner on the entrance of the train</string>
    <string name="chair_number">Chair Number</string>
    <string name="please_scan_qr_code_to_get_in_your_train">Please, Scan QR code\nto get in your train.</string>
    <string name="pending_payment">Pending Payment</string>
    <string name="start_station">Start Station</string>
    <string name="end_station">End Station</string>
    <string name="ticket_cost">Ticket Cost</string>
    <string name="your_balance">Your Balance</string>
    <string name="payment_history">Payment History</string>
    <string name="recharge_your_wallet">Recharge your wallet</string>
    <string name="pay_with_card">Pay with card</string>
    <string name="pay_with_fawry">Pay with Fawry</string>
    <string name="payment">Payment</string>
    <string name="wallet">Wallet</string>
    <string name="open_your_qr_code">Open your QR code</string>
    <string name="remember_password">Remember Password</string>
    <string name="you_have_already_an_account">you have already an account,</string>
    <string name="sign_in">SIGN IN</string>
    <string name="your_password">Your Password</string>
    <string name="bus_payment">BUS PAYMENT</string>
    <string name="metro_payment">METRO PAYMENT</string>
    <string name="train_payment">TRAIN PAYMENT</string>
    <string name="you_don_t_have_an_account">you don\'t have an account,</string>
    <string name="your_name">Your Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_email">Your Email</string>
    <string name="get_your_ticket_by_one_click">Get your ticket by\none click</string>
    <string name="get_your_train_ticket_in_easy_way_scan_the_train_number_and_that_s_it">Get your train ticket in easy way\nscan the train number and that\'s it</string>
    <string name="start">START</string>
    <string name="next">NEXT</string>
    <string name="pay_your_transportation_fees_in_bus_or_metro_with_no_hustle_easy_to_use_for_everyone">Pay your transportation fees in bus or metro\nwith no hustle. easy to use for everyone</string>
    <string name="settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="get_help">Get Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="please_scan_this_qr_code">Please, scan this QR code</string>
    <string name="place_the_code_inside_the_frame">Place the code inside the frame</string>
    <string name="scan_code">Scan code</string>
    <string name="my_code">My code</string>
    <string name="go_back">Go Back</string>
    <string name="qr_code">QR Code</string>
    <string name="expiry_date">Expiry Date\n(eg. MM/YY)</string>
    <string name="holder_name">Holder Name</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_another_card">Add another card</string>
    <string name="card_number_0000_0000_0000_0000">Card Number: 0000 0000 0000 0000</string>
    <string name="select_location">Select Location</string>
    <string name="ticket">Ticket</string>
    <string name="_1_ticket">1 Ticket</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="month_mm">Month (MM)</string>
    <string name="amount">Amount</string>
    <string name="year_yyyy">Year (YYYY)</string>
    <string name="card_number">Card Number</string>
    <string name="select_line">Select Line</string>
    <string name="nan">____</string>
    <string name="working_on_it">Working on it</string>
    <string name="cvv">CVV</string>
    <string name="flip_card">Flip Card</string>
    <string name="swipe_to_flip">Swipe to Flip</string>
    <string name="cvv_key">CVV Key</string>
    <string name="swipe_card_or_click_here_to_flip">Swipe card or Click here to flip</string>
    <string name="add_new_card">Add New Card</string>
    <string name="delete">Delete</string>
    <string name="delete_card">Delete Card</string>
    <string name="choose_card">Choose Card</string>
    <string name="click_here_to_flip">Click here to flip Card</string>
    <string name="menu">MENU</string>
    <string name="charge_now">Charge Now</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="enter_old_password_to_confirm">Enter old Password to confirm</string>
    <string name="enter_your_email_and_phone">Enter your email and phone</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="enter_your_new_password">Enter your new Password</string>
    <string name="select_card">Select Card</string>
    <string name="you_don_t_have_any_bus_data_before_please_scan_a_qr_ticket">You don\'t have any bus data before please scan a QR ticket</string>
    <string name="you_don_t_have_any_metro_data_before_please_scan_a_qr_ticket">You don\'t have any metro data before please scan a QR ticket</string>
    <string name="you_don_t_have_any_history_before_please_scan_a_qr_ticket">You don\'t have any history before please scan a QR ticket</string>
    <string name="about">This application work on three types of transportation (National Authority for Subway),(National Public Transportation) and (Egypt Railways). Only you need one of two method the first is (RF tag) and the other is your phone Camera. You can get RF tag from the ministry of transportation. Once you create an account on the app you have the access to pay metro,train,bus tickets. You have a wallet on the app that you can recharge it by an card.</string>
    <string name="help">In the event of any difficulties or lack of understanding of any of the uses of the program please visit our web site\n</string>
    <string name="working_in_progress_nplease_use_pay_with_card_for_now">Working in progress please use Pay with Card for now</string>
</resources>
