<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enter_your_email_and_phone"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/ic_subtraction_2"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        tools:ignore="Autofill"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/ic_subtraction_2"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        tools:ignore="Autofill"
        />

    <Button
        android:id="@+id/conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_rectangle_8"
        android:text="@string/confirm"
        android:textColor="@color/tealish"
        android:textStyle="bold"
        />

</LinearLayout>