<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/line_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/lineNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/startStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/endStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            android:gravity="center_vertical"
            android:hint="@string/select_date"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greyish"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:src="@drawable/ic_group_67"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="5sp"
                android:text="@string/_1_ticket"
                android:textColor="@color/warm_grey"
                android:textSize="15sp"
                />

            <ImageButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:src="@drawable/ic_group_66"
                tools:ignore="ContentDescription"
                />

        </LinearLayout>

        <Button
            android:id="@+id/checkOut_train"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/ic_rectangle_8"
            android:lineSpacingExtra="5sp"
            android:text="@string/checkout"
            android:textColor="@color/tealish"
            android:textSize="15sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>