<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_three"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enter_your_new_password"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textSize="14sp"
            tools:ignore="Autofill"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_subtraction_2"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textSize="14sp"
            tools:ignore="Autofill"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_rectangle_8"
        android:text="@string/confirm"
        android:textColor="@color/tealish"
        android:textStyle="bold"
        />

</LinearLayout>